# AI-music-FM-agent-by-Claude-code

./: .env.example  .gitignore  README.md  setup.bat  start.bat
public/: index.html  make-icons.html  manifest.json  sw.js
public/css/: style.css
public/js/: api.js  app.js  chat.js  netease.js  player.js  ui.js
scripts/: gen-icons.js
server/: index.js  package-lock.json  package.json
server/config/: index.js
server/routes/: api.js
server/services/: ai.js  dj.js  library.js  memory.js  netease.js  player.js  tts.js  weather.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
